syntax = "proto3";
package serverOfficial;
option go_package = "serve/servicejili/jiliOfficialProto/serverOfficial";
import "google/protobuf/timestamp.proto";
import "jilijpOfficial/jilijpOfficial.proto";

enum Error {

    success = 0;
    SpecialError = 123;
    plateInvalid = 211;
    gameInvalid = 241;
    kicked = 242;
    internal = 243;
    paramter = 251;
    ackType = 252;
    reLogin = 253;
    spinBet = 301;
    spinRetry = 303;
    spinReject = 304;
    spinCoinError = 305;
    spinErrorNoKick = 306;
    spinCurrecny = 311;
    spinLock = 312;
    spinMGA = 321;
    spinUnmarshal = 322;
    spinBetZero = 323;
    spinExtra = 324;
    spinItem = 325;
    spinMall = 326;
    spinBuy = 327;
    spinFree = 328;
    spinTournaments = 329;
    spinNil = 330;
    spinBuff = 331;
    missionUnavailable = 400;
    itemUnavailable = 500;
    signUnavailable = 600;
    trialUnavailable = 700;
    trialIsEnd = 701;
    freeSpinError = 702;
    vipSignUnavailable = 800;
    DebrisUnavailable = 801;
    DebrisError = 802;
    NoMallSetting = 901;
    BuyBonusUnavailable = 902;
    GiftCodeError = 911;
    BuffError = 921;
    unknow = 9999;
}

enum AckType {

    spin = 0;
    info = 1;
    notice = 2;
    logout = 3;
    lastSpin = 4;
    getBackPack = 5;
    checkItem = 6;
    getMail = 7;
    readMail = 8;
    getDailyMission = 9;
    getNowMission = 10;
    customAck = 11;
    checkSignUpStatus = 12;
    trialInfo = 14;
    trialSignUp = 16;
    trialGiveUp = 17;
    getAllItemCanUse = 18;
    vipSignInfo = 19;
    vipSignReward = 20;
    jpInfo = 21;
    jpHistory = 22;
    lotteryPlayerInfo = 23;
    lotteryReward = 24;
    fullJpInfo = 25;
    fullJpHistory = 26;
    fullJpInfoAll = 27;
    debrisInfo = 29;
    debrisPlayerInfo = 30;
    debrisGet = 31;
    debrisExchange = 32;
    jpShowData = 33;
    getPlayerLevel = 34;
    unshow = 36;
    spinend = 37;
    mallinfo = 38;
    giftcodeverify = 39;
    giftcodecheckblock = 40;
    freeAbandon = 41;
    freeGetAll = 42;
    freeGetHistory = 43;
    freeBonusReward = 44;
    buffGetBack = 45;
    buffGetNow = 46;
    buffUseReport = 47;
    buffGetParam = 48;
    getMission2 = 49;
    jilijpHistory = 50;
    jilijpSetting = 51;
    jilijpRecentWin = 52;
    freeGetAutoInfo = 53;
    jilijpGameList = 54;
    jilijpLastGrand = 55;
}

message Request {

    int32 ack = 1;
    bytes req = 2;
}

message GaiaResponse {

    int32 type = 1;
    int32 ret = 2;
    string token = 3;
    string Error_msg = 4;
    bytes data = 5;
    google.protobuf.Timestamp now = 6;
}

message BuffReq {

    int32 lang = 1;
    int32 gameid = 2;
    int64 buffidx = 3;
    int64 buffid = 4;
    repeated int64 idlist = 5;
}

message PlayerBuff {

    int64 Buff_index = 1;
    int64 BuffI_d = 2;
    int64 Begin_time = 3;
    int64 End_time = 4;
    int32 Buff_type = 5;
    double Param1 = 6;
    double Param2 = 7;
    double Param3 = 8;
    double Param4 = 9;
}

message BuffList {

    repeated serverOfficial.PlayerBuff Buff = 1;
}

message BuffResp {

    double Buff_mul = 1;
    double Buff_mul_win = 2;
    int32 Buff_exbet = 3;
    int32 Buff_free = 4;
}

message DebrisReq {

    uint32 no = 1;
    uint32 formula = 2;
    uint32 amount = 3;
    uint32 currencynumber = 4;
}

message freeSpinList {

    repeated serverOfficial.freeData free = 1;
}

message freeData {

    string id = 1;
    int32 remain = 2;
    int32 type = 3;
    double bet = 4;
    double max_win = 5;
    double now_win = 6;
    serverOfficial.freeBonus bonus_data = 7;
    google.protobuf.Timestamp expired = 8;
    bool is_allow_stop = 9;
    bool close_on_finish = 10;
}

enum freeType {

    NormalFree = 0;
    GiftCodeFree = 1;
    TadaFree = 2;
    FreeBonue = 3;
}

message freeBonus {

    double wager = 1;
    double wager_odds = 2;
    int32 period = 3;
    google.protobuf.Timestamp expired = 4;
    bool is_in_wager = 6;
    double max_win = 7;
    bool is_end = 8;
    double base_win = 9;
}

message freeBonusGameList {

    repeated serverOfficial.freeBonusGame list = 1;
}

message freeBonusGame {

    int32 gameI_d = 1;
    int32 remain = 2;
    string id = 3;
    google.protobuf.Timestamp expired = 4;
}

message freeBonusRecordList {

    repeated serverOfficial.freeBonusRecord list = 1;
}

message freeBonusRecord {

    int32 state = 1;
    int32 game_id = 2;
    double bonus = 3;
    int32 type = 4;
    string id = 5;
    google.protobuf.Timestamp record_time = 6;
}

message freeReq {

    string id = 1;
}

message freeBonusRewardReq {

    string id = 1;
}

message freeBonusRewardResp {

    serverOfficial.freeBonus bonus_data = 1;
    double win = 2;
    bool isO_k = 3;
    serverOfficial.freeData free = 4;
}

message freeAutoList {

    repeated serverOfficial.freeAutoInfo list = 1;
}

message freeAutoInfo {

    string name = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time = 3;
    google.protobuf.Timestamp register_time = 4;
    int32 free_spin_type = 5;
    repeated int32 game_ids = 6;
    bool is_available = 7;
}

message FullJpListResp {

    double value = 1;
    double full = 2;
    uint32 min_vip = 3;
    double min_bet = 4;
}

message FullJpHistoryReq {

    google.protobuf.Timestamp start_time = 1;
    google.protobuf.Timestamp end_time = 2;
}

message FullJpHistoryResp {

    repeated serverOfficial.FullJpHistoryInfo list = 1;
}

message FullJpAllResp {

    repeated serverOfficial.FullJp list = 1;
}

message FullJpHistoryInfo {

    string winner = 1;
    double win = 2;
    int32 time = 3;
}

message FullJp {

    uint32 gameI_d = 1;
    double value = 2;
    double full = 3;
}

message VerifyGiftCodeRequest {

    string Giftcode = 1;
}

message VerifyGiftCodeResponse {

    int32 Code = 1;
    int32 Round = 2;
    int32 Type = 3;
    serverOfficial.freeSpinList free_spin = 4;
}

message CheckBlockGiftCodeResponse {

    int32 Code = 1;
    string Message = 2;
    bool Is_block = 3;
    int32 Block_duration = 4;
    int32 Error_input_amount = 5;
}

message InfoReq {

    string os = 1;
    string language = 2;
    serverOfficial.Browser browser = 3;
    string version = 4;
    string model = 5;
}

message Browser {

    string type = 1;
    string version = 2;
    string language = 3;
    uint32 width = 4;
    uint32 height = 5;
    float ratio = 6;
}

message GameInfoAck {

    repeated serverOfficial.WalletInfo Wallet_info = 1;
    serverOfficial.PreferRoundShow Prefer = 2;
    int32 Free_spin_remain = 3;
    bytes extra_info = 5;
    double rtp = 6;
    repeated double jp_unlock_bet = 7;
    serverOfficial.MallInfo mall = 8;
    int32 Api_type = 9;
    double Free_spin_bet = 10;
    serverOfficial.GameMallInfo game_mall = 12;
    double Max_odd = 13;
    serverOfficial.freeSpinList free_spin = 14;
    int32 free_spin_type = 15;
    serverOfficial.Tournament tournament = 16;
}

message WalletInfo {

    int32 currency_number = 1;
    string currency_name = 2;
    string currency_symbol = 3;
    double coin = 4;
    repeated double bet = 5;
    double unit = 6;
    double ratio = 7;
    double rate = 8;
    double upper = 9;
    double lower = 10;
    double cycle = 11;
    int32 decimal = 12;
}

message PreferRoundShow {

    double Base_round = 1;
    double Sigma_round = 2;
    double C_v = 3;
    double H_r = 4;
    double MG_r = 5;
    int32 Range = 6;
    int32 Show = 7;
}

message MallInfo {

    double Price_odd = 1;
    int32 Desc_type = 2;
    double Max_bet = 3;
    int32 AlterI_d = 4;
    int32 Show = 5;
}

message GameMallInfo {

    double Max_bet = 1;
    repeated double Price_odd = 2;
    repeated int32 AlterI_d = 3;
}

message Tournament {

    int32 id = 1;
    double balance = 2;
    double init_balance = 3;
    double Min_bet = 4;
    double Max_bet = 5;
    int32 goal = 6;
    google.protobuf.Timestamp start = 7;
    google.protobuf.Timestamp end = 8;
    bool buy_bonus_on = 9;
    bool extra_bet_on = 10;
    int32 category = 11;
}

enum goalType {

    NONE = 0;
    ACCWIN = 1;
    MULT = 2;
}

enum categoryType {

    Normal0 = 0;
    Normal1 = 1;
    GameClash = 2;
    Championship = 3;
}

message Itemdata {

    int32 itemindex = 1;
    int32 itemid = 2;
    int32 amount = 3;
    int32 gameid = 4;
    int32 lvmin = 5;
    int32 lvmax = 6;
    double coinlimit = 7;
    int32 dailyremaintimes = 8;
    string start_time = 9;
    string expiredtime = 10;
    double bet = 11;
    int32 spinpaytype = 12;
    double givetype = 13;
    int32 wintype = 14;
    double winmultiplier = 15;
    double winmaxmag = 16;
    int32 winmagset = 17;
    double itemvalue = 18;
    string itemname = 19;
    int32 icon = 20;
    int32 banreason = 21;
    string itemdesc = 22;
    int32 star = 23;
    string gamename = 24;
    int32 currencynumber = 25;
    int32 source = 26;
    double playvalue = 27;
    int64 start = 28;
    int64 expired = 29;
}

message BackPackInfo {

    int32 result = 1;
    repeated serverOfficial.Itemdata playeritemdata = 2;
}

message BackPack {

    serverOfficial.BackPackInfo info = 1;
    int32 ret = 2;
}

message CheckUseItemReq {

    double bet = 1;
    int32 itemindex = 2;
    int32 itemid = 3;
    int32 amount = 4;
    int32 currency_number = 5;
}

message ItemInfo {

    int32 result = 1;
    double bet = 2;
    int32 spinpaytype = 3;
    int32 givetype = 4;
    int32 wintype = 5;
    double winmultiplier = 6;
    double winmaxmag = 7;
    double winmagupperbound = 8;
    double winmaglowerbound = 9;
    int32 star = 10;
    int32 icon = 11;
    int32 alterid = 12;
    double coinlimit = 13;
    int32 source = 14;
    double playvalue = 15;
}

message CheckUseItem {

    serverOfficial.ItemInfo info = 1;
    int32 ret = 2;
}

message ListAllGameInfo {

    int32 result = 1;
    repeated serverOfficial.ItemListData canuseitem = 2;
}

message ItemListData {

    int32 gameid = 1;
    int32 ownamount = 2;
    int32 canamount = 3;
    int32 minitemindex = 4;
}

message MailInfo {

    int32 result = 1;
    repeated serverOfficial.Maildata usermailackdata = 2;
    int32 isread = 3;
}

message Maildata {

    int32 idx = 1;
    int32 accountid = 2;
    int32 source = 3;
    serverOfficial.Content content = 4;
    int32 isread = 5;
    string createtime = 6;
    int64 created = 7;
}

message Content {

    int32 action = 1;
    int32 gameid = 2;
    int32 itemid = 3;
    double amount = 4;
    string createtime = 5;
    int32 wintype = 6;
    string msg = 7;
    int32 star = 8;
}

message GetUserMail {

    serverOfficial.MailInfo info = 1;
    int32 ret = 2;
}

message ReadMailResp {

    serverOfficial.ReadMailInfo info = 1;
    int32 ret = 2;
}

message ReadMailInfo {

    int32 result = 1;
}

message JpListResp {

    repeated serverOfficial.JpInfo info = 1;
}

message JpHistoryReq {

    google.protobuf.Timestamp start_time = 1;
    google.protobuf.Timestamp end_time = 2;
}

message JpHistoryResp {

    repeated serverOfficial.JpHistoryInfo list = 1;
}

enum JpType {

    None = 0;
    Mini = 1;
    Major = 2;
    Grand = 3;
    Full_Jp = 100;
}

message JpInfo {

    int32 type = 1;
    double value = 2;
}

message JpHistoryInfo {

    int32 type = 1;
    string winner = 2;
    double win = 3;
    int32 gameI_d = 4;
    string nickname = 5;
}

message JpMarqueeInfo {

    uint32 aI_d = 1;
    uint32 gameI_d = 2;
    int32 type = 3;
    string winner = 4;
    double win = 5;
    string winner_nickname = 6;
}

message JpOpen {

    int32 type = 1;
    double win = 2;
}

message JpShowData {

    repeated serverOfficial.JpInfo info = 1;
    repeated int32 game = 2;
}

message DailyMissionInfo {

    string message = 1;
    bytes messageb = 2;
    bytes list = 3;
}

message NoticeReq {

    string lang = 1;
    int32 currency_number = 2;
    string Stamp = 3;
    int32 level = 4;
}

enum NoticeType {

    CoinChange = 0;
    Message = 1;
    EventGift = 2;
    CustomType = 3;
    ExChange = 4;
}

message NoticeInfo {

    int32 type = 1;
    double value = 2;
    string message = 3;
    bytes custom_data = 4;
    int32 currency_number = 5;
}

message NoticeResponse {

    repeated serverOfficial.NoticeInfo notice = 1;
    string Stamp = 2;
}

enum VipError {

    VipSuccess = 0;
    Unavailable = 1;
    ParameterError = 2;
    Reject = 3;
}

message VipSignInfoReq {

    int32 currency = 1;
}

message VipSignInfoResp {

    repeated serverOfficial.Treasure Treasure_list = 1;
    google.protobuf.Timestamp Expired_time = 2;
    int32 Error = 3;
}

message Treasure {

    string Index = 1;
    int32 Min_vip = 2;
    double Exp = 3;
    bool Is_open = 4;
}

message VipSignRewardReq {

    int32 currency = 1;
    string treasure_index = 2;
}

message VipSignRewardResp {

    int32 ItemI_d = 1;
    int32 Count = 2;
    int32 Error = 3;
    int32 Icon = 4;
}

message SpinReq {

    double bet = 1;
    uint32 cheat = 2;
    uint32 item_index = 3;
    uint32 itemI_d = 4;
    int32 currency_number = 7;
    double mall_bet = 8;
    uint32 vip = 9;
    bytes custom_req = 10;
    bool is_free = 11;
    uint32 Extra = 12;
    uint32 Level = 13;
    int32 BD_type = 14;
    int32 BB_times = 15;
    double Accu_mall_bet = 16;
    double Game_mall_bet = 17;
    int32 Game_mall_type = 18;
    bool isr = 19;
    int32 Buy_custom_type = 20;
    bool isturbo = 21;
    serverOfficial.ItemSpin item = 22;
    serverOfficial.MallSpin mall = 23;
    serverOfficial.BuySpin buy = 24;
    serverOfficial.SpecialCase special = 25;
    serverOfficial.ExtraSpin extra_spin = 26;
    serverOfficial.FreeSpin free_spin = 27;
    bytes client_record = 28;
    serverOfficial.SpecialBonus special_bonus = 29;
    bool istournament = 30;
}

message ClientRecord {

    int32 BD_type = 1;
    int32 BB_times = 2;
    double Accu_mall_bet = 3;
}

message ItemSpin {

    uint32 I_d = 1;
    uint32 Index = 2;
}

message ExtraSpin {

    uint32 Index = 1;
}

message MallSpin {

    int32 Type = 1;
    int32 Index = 2;
    double Bet = 3;
}

enum MallType {

    NormalMall = 0;
    GameMall = 1;
}

message BuySpin {

    int32 Buy_custom_type = 1;
}

message FreeSpin {

    bool free = 1;
}

message SpecialCase {

    bool turbo = 1;
    uint32 cheat = 2;
    bool robot = 3;
    bool tournament = 4;
}

enum BDType {

    BDNone = 0;
    BDItem = 1;
    BDBuyBonus = 2;
    BDFreeSpin = 3;
    BDBuyBonusGame = 4;
}

message SpinResponse {

    bytes data = 1;
    serverOfficial.ServiceData service = 2;
    double total_win = 3;
    int64 round_index = 4;
    double post_money = 6;
    int32 Start_round = 7;
    bool hasspin = 8;
    int32 BD_type = 9;
    int32 BB_times = 10;
    double Mall_bet = 11;
    double Accu_mall_bet = 12;
    int32 ItemI_d = 13;
    int32 Item_icon = 14;
    int32 Item_amount = 15;
    double Base_bet = 16;
    double Real_bet = 17;
    int32 Spin_type = 18;
    int32 Item_level = 19;
    int64 round_indexV2 = 20;
    double Game_mall_bet = 21;
    int32 Game_mall_type = 22;
    serverOfficial.SpinReq spin_req = 23;
}

message SpinEndReq {

    int32 Now_round = 1;
    bool Is_end = 2;
}

message SpinEndAck {

    int32 Ack_type = 1;
    int32 Now_round = 2;
    double Now_money = 3;
}

message ExtraSpinReq {

    int64 bet = 1;
    int32 currency_number = 2;
    uint32 vip = 3;
}

message ServiceData {

    uint32 mission_reward = 1;
    int32 jp_type = 2;
    double jp_win = 3;
    double full_jp_win = 4;
    int32 trialfinish = 5;
    int32 trialaward = 6;
    int32 freeremain = 7;
    bytes cardlist = 8;
    bytes buff = 9;
    bytes missionlist = 13;
    serverOfficial.freeSpinList free_remainV2 = 15;
    bytes mission2 = 16;
    jilijpOfficial.JiliJpOpen jili_jp_open = 17;
}

message SpecialBonus {

    bool used = 1;
}